# tms4-data-reader

./: LICENSE  README.md  pyproject.toml  tms4_data_reader.py
data/: data_94226401_2022_09_21_0.csv
